Ama/eval result data records (#24)
* Extend evalResult data type swagger spec with dataRecordsEnabled flag

* Introduce spec autogenerated DataRecordsEnabled property

* Extend flag evaluation result with DataRecordsEnabled value

* Fix autogenerated description for evaluation/batch
